fix: issue with color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,8 @@
 :root {
-    --primary-color: #32978f;
-    --secondary-color: #10676d;
-    --accent1-color: #525252;
-    --accent2-color: #bfbfbf;
-    --accent3-color: #ec5f01;
+    --primary-color: #e45909;
+    --secondary-color: #5a5149;
+    --accent1-color: #ffffff;
+    --accent2-color: #2c2c2c;
     --heading-font: "Roboto", sans-serif;
     --body-font: "Roboto", sans-serif;
     --screen-medium: 768px;
@@ -13,7 +12,7 @@
 
 header {
     background-color: var(--accent2-color);
-    color: var(--accent1-color);
+    color: var(--accent2-color);
     margin: 1rem auto;
 	display: grid;
 	grid-template-columns: 200px 1fr;
@@ -29,7 +28,7 @@ header {
 
 body {
     font-family: var(--body-font);
-    color: var(--accent1-color);
+    color: var(--secondary-color);
 }
 
 header, main, footer {
@@ -50,7 +49,7 @@ h1 {
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent2-color);
-    color: var(--accent3-color);
+    color: var(--accent1-color);
 }
 
 nav {
@@ -98,7 +97,7 @@ header .logo-box img {
 }
 
 .navigation a:hover {
-	color: var(--accent3-color);
+	color: var(--primary-color);
 	text-decoration: none;
 }
 
@@ -124,9 +123,15 @@ header .logo-box img {
     width: 80%;
     margin: 0;
     padding: 16px;
-    opacity: 0.85;
-    background-color: var(--accent1-color);
-    color: var(--accent2-color);
+    opacity: 0.95;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+    background-color: var(--accent2-color);
+    color: var(--accent1-color);
 }
 
 .hero article p {
@@ -136,12 +141,13 @@ header .logo-box img {
 
 .hero article img {
     float: right;
-    width: 125px;
+    width: 300px;
 }
 
 .socialmedia a img {
     width: 24px;
     height: 24px;
+    filter: brightness(0) invert(1);
 }
 
 .history {
